| Bug #17826 | 'type_decimal' fails with ps-protocol | ||
|---|---|---|---|
| Submitted: | 1 Mar 2006 15:47 | Modified: | 4 Mar 2006 8:36 |
| Reporter: | Sergey Gluhov | ||
| Status: | Closed | ||
| Category: | Server: PS | Severity: | S3 (Non-critical) |
| Version: | 5.0.18 | OS: | Linux (Linux) |
| Assigned to: | Sergey Gluhov | Target Version: | |
[1 Mar 2006 15:47]
Sergey Gluhov
[2 Mar 2006 17:04]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3393
[3 Mar 2006 12:25]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3423
[3 Mar 2006 12:40]
Sergey Gluhov
Fixed in 5.0.19
[4 Mar 2006 8:36]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.0.19 changelog. Closed.
