Fix for bug#17826 'type_decimal' fails with ps-protocol  removed unnecessary calculation of cache value  otherwise Join::preapre tries to calculate  undefined values(filed values)